--- a/table.css
+++ b/table.css
@@ -1,3 +1,19 @@
-table {
-    background-color: red;
+#visContainer {
+  z-index: 0;
+}
+
+#visSvg {
+  z-index: 1;
+}
+
+table.reportTable {
+  width: 100%;
+  table-layout: auto;
+  opacity: 0;
+  transition: opacity 1000ms;
+  background-color: red;
+}
+
+table.reportTable.reveal {
+  opacity: 1;
 }
