--- a/table.css
+++ b/table.css
@@ -1,9 +1,11 @@
 #visContainer {
   z-index: 0;
+  background-color: red;
 }
 
 #visSvg {
   z-index: 1;
+  background-color: red;
 }
 
 table.reportTable {
@@ -16,4 +18,5 @@ table.reportTable {
 
 table.reportTable.reveal {
   opacity: 1;
+  background-color: red;
 }
